# HiPeristaltic

./: README.md  setup_hiperistaltic.sh
firmware/ATMega_Arduino/HiPeristaltic/: HiPeristaltic.ino
firmware/RP2350_Pico2/HiPeristaltic/: CMakeLists.txt  HiPeristaltic.c
firmware/RP2350_Pico2/HiPeristaltic/_faster_experimental/: dif.txt  notes2self.txt  readme.txt  stdio_usb.c  stdio_usb.h
firmware/STM32G0B1RET6_BIGTREETECH/HiPeristaltic/: .cproject  .mxproject
firmware/STM32G0B1RET6_BIGTREETECH/HiPeristaltic/Core/Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h  tmc2209_d.h
firmware/STM32G0B1RET6_BIGTREETECH/HiPeristaltic/Core/Src/: main.c  tmc2209_d.c
firmware/STM32G0B1RET6_BIGTREETECH/HiPeristaltic/Release/: HiPeristaltic.list  HiPeristaltic.map  makefile  objects.list  sources.mk
firmware/STM32G0B1RET6_BIGTREETECH/STM32CubeProject/HiPeristaltic/: .project  HiPeristaltic Debug.launch  HiPeristaltic Release.launch  HiPeristaltic.ioc
firmware/STM32G0B1RET6_BIGTREETECH/STM32CubeProject/HiPeristaltic/Release/: makefile  (+3 more)
firmware/STM32G0B1RET6_BIGTREETECH/stm32duino/: HiPeristaltic.ino  README.md  README.txt
firmware/STM32G0B1RET6_BIGTREETECH/stm32duino/experimental/: README.md
interface/: HiPeristaltic.toml  HiPeristalticInterface.py
other/utils/: cmds_arduino.txt  cmds_python.txt  ino2py.py
silav2/: HiPeristaltic_v09.xml  RunHiPeristalticTest.py  pyproject.toml
silav2/HiPeristaltic/: __init__.py  __main__.py  server.py
silav2/HiPeristaltic/feature_implementations/: HiPeristaltic.toml  HiPeristalticInterface.py  __init__.py  hiperistaltic_impl.py
(+85 files in other folders)
